--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="bookmark_bible_fragment">BOOKMARK BIBLE FRAGMENT</string>
     <string name="home_bible_fragment">HOME BIBLE FRAGMENT</string>
     <string name="bible">BIB</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
