--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,15 +14,12 @@
     <string name="bibleBook">BIB</string>
     <string name="bookmark">Bookmark</string>
     <string name="compose_song_fragment">COMPOSE SONG FRAGMENT</string>
-    <string name="favourite_song_fragment">FAVOURITE SONG FRAGMENT</string>
-    <string name="home_song_fragment">HOME SONG FRAGMENT</string>
     <string name="bookmark_bible_fragment">BOOKMARK BIBLE FRAGMENT</string>
     <string name="home_bible_fragment">HOME BIBLE FRAGMENT</string>
     <string name="bible">BIB</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">Search</string>
     <string name="en">EN</string>
     <string name="ma">MA</string>
     <string name="lang">Lang</string>
+    <string name="fav">Fav</string>
 </resources>
